# hvcommunication

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  settings.yml
examples/: CMakeLists.txt
examples/1-tlm-socket/: base-initiator.h  base-target.h  hv-initiator.h  hv-target.h  main.cpp  tlm-initiator.h  tlm-target.h
src/: CMakeLists.txt  HVCommunication  communication.h
src/communication/: communication.h
src/core/tlm-2/: helpers.h
src/location/: addressing_payload_if.h  location.h
src/protocols/i2c/: i2c_payload.h  i2c_payload.hpp  i2c_protocol.h  i2c_router.h  i2c_simple_socket.h  i2c_socket.h
src/protocols/irq/: irq_payload.cpp  irq_payload.h  irq_protocol.h  irq_simple_socket.h  irq_socket.h
src/protocols/memory_mapped/: memory_mapped_payload.h  memory_mapped_payload.hpp  memory_mapped_protocol.h  memory_mapped_protocol_converters.h  memory_mapped_router.h  (+2 more)
tests/: CMakeLists.txt  run_all_tests.cpp
tests/conan/: CMakeLists.txt  conanfile.py  example.cpp
tests/generic_router/: generic_router_test.cpp  generic_router_test_classes.h
tests/protocols/: i2c_protocol_test.cpp  i2c_protocol_test_classes.h  irq_protocol_test.cpp  irq_protocol_test_classes.h  memory_mapped_protocol_test.cpp  memory_mapped_protocol_test_classes.h  signal_protocol_test.cpp  signal_protocol_test_classes.h  uart_protocol_test.cpp  uart_protocol_test_classes.h
tests/sockets/: bidirectional_socket_test.cpp  bidirectional_socket_test_classes.h  convenient_sockets_test.cpp  convenient_sockets_test_classes.h  multi_socket_test.cpp  multi_socket_test_classes.h
(+34 files in other folders)
